--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>SCORVEN</title>
   <link rel="stylesheet" href="style.css" />
-<style>
-  /* Base Reset & Layout */
+  <style>
+    /* Base Reset & Layout */
 * {
   margin: 0;
   padding: 0;
@@ -524,7 +524,7 @@ footer::before {
 }
 
 .copyright p{
-  font-size: 1.25rem;
+  font-size: 1.rem;
 }
 
 footer p,
@@ -608,7 +608,7 @@ footer a:hover {
 
   /* Info Section */
   .info-section {
-    height: auto;
+    height: 125vh;
     padding: 1.5rem 1rem;
   }
   .picture img {
@@ -635,7 +635,15 @@ footer a:hover {
     border-radius: 8px;
     height: auto;
   }
-
+.capture{
+  height: 120vh;
+}
+.capture h2{
+  margin-top: 0px;
+}
+.capture .video-conatainer{
+  margin-top: 10px;
+}
   /* Headings */
   .Technical h2,
   .info-section h2,
@@ -733,7 +741,7 @@ footer a:hover {
   }
 }
 
-</style>
+  </style>
 </head>
 
 <body>
