--- a/index.html
+++ b/index.html
@@ -751,7 +751,7 @@ footer a:hover {
       <div class="logo">SCORVEN</div>
       <ul class="nav-links">
         <li><button onclick="navigateTo('register')">Explore</button></li>
-        <li><button onclick="navigateTo('neuroscan')">NeuroScan</button></li>
+        <li><button onclick="navigateTo('login')">login</button></li>
       </ul>
     </div>
   </nav>
@@ -979,8 +979,8 @@ footer a:hover {
       if (page === 'register') {
         window.location.href = "register.html";
       }
-       if (page === 'neuroscan') {
-        window.location.href = "https://hhd3k5wn-5000.inc1.devtunnels.ms/";
+       if (page === 'login') {
+        window.location.href = "login.html";
       }
     }
 
